<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="account_upgrated">Your account has been upgraded successfully.</string>
    <string name="accounts">Accounts</string>
    <string name="activate">Activate</string>
    <string name="activate_coupon">Activate Coupon</string>
    <string name="add_a_photo_to_your_instagram_profile">Add a photo to your Instagram profile</string>
    <string name="add_account">Add Account</string>
    <string name="add_bio_to_instagram">Add bio to instagram</string>
    <string name="allow">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anti_ban">Anti-Ban</string>
    <string name="app_name">TopFollow</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication">Authentication error!</string>
    <string name="authentication2">Authentication error</string>
    <string name="authentication_des">Your Instagram account requires authentication&lt;br>To solve this problem, first log into your account through the web or the official Instagram application, then try using Top Follow</string>
    <string name="authentication_passed">"Authentication is done.
Please start task again."</string>
    <string name="authentication_phone">Phone Number Authentication</string>
    <string name="auto_login">Auto Login</string>
    <string name="back">Back</string>
    <string name="back_login_des">Do you want go back?</string>
    <string name="bio_added_successfully">Bio successfully added</string>
    <string name="bio_warning">You must complete your bio in instagram!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buy">Buy</string>
    <string name="buy_followers">Buy Followers</string>
    <string name="buy_followers_likes">Buy Followers &amp; Likes</string>
    <string name="buy_instagram_follower">Buy Instagram Followers</string>
    <string name="buy_threads_follower">Buy Threads Followers</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Canceled</string>
    <string name="cancel_st">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_in">Check in</string>
    <string name="choose_your_request_type">Choose your request type</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="codes">Codes</string>
    <string name="coin_added_successfully">Coin added successfully.</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">3490b2ee52e549389ff23306298ebd1b</string>
    <string name="comment_order">Comment Order</string>
    <string name="comments_for">comments for</string>
    <string name="comments_was_ordered">comments was ordered.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete">Completed</string>
    <string name="connection">Connection!</string>
    <string name="coupon_copied_to_clipboard">Coupon copied to clipboard.</string>
    <string name="coupon_not_valid">Coupon not valid!</string>
    <string name="coupon_submmited_successfully">Coupon registered successfully.</string>
    <string name="coupons">Coupons</string>
    <string name="create">Create</string>
    <string name="create_new_coupon">Create new coupon</string>
    <string name="crystal_left">Crystal left</string>
    <string name="crystals_earned_from_referrals">Crystals earned from referrals</string>
    <string name="daily_bonus">Daily bonus</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Delete Warning</string>
    <string name="do_you_want">Do you want delete</string>
    <string name="do_you_want_2">" account?"</string>
    <string name="done">Done</string>
    <string name="download_new_version">Update App</string>
    <string name="earn_coins">Earn coins</string>
    <string name="enter_coupon_crystals">Enter coupon crystals</string>
    <string name="enter_question_1">Do you want to login to</string>
    <string name="enter_question_2">account?</string>
    <string name="enter_target_link">Enter Target Post Link</string>
    <string name="enter_target_username">Enter Target Username</string>
    <string name="enter_your_comment_text">Enter your comment text</string>
    <string name="error">Error!</string>
    <string name="error2">Error</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="flag_description">"Dear user&lt;br>The flag option is active for your account.&lt;br>This feature of Instagram makes your new followers need to be confirmed and makes the number of your followers appear lower than the actual number after completing the order.&lt;br>To fix this problem, go to &lt;b>Settings -> Follow and Invite friends&lt;/b> or another section &lt;b>Settings -> Followers and Contacts&lt;/b>
And Uncheck the &lt;b>Flag for review&lt;/b> section."</string>
    <string name="flag_warning">Warning!</string>
    <string name="followers_">Followers</string>
    <string name="followers_was_ordered">followers was ordered</string>
    <string name="free_coins">Free Coins</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="gcm_defaultSenderId">360245802611</string>
    <string name="gem_not_valid">The minimum number of crystals must be 500!</string>
    <string name="gen_not_enough">Your number of crystals is not enough!</string>
    <string name="get">Get</string>
    <string name="go_to_app">Ignore</string>
    <string name="go_to_app2">Go to app</string>
    <string name="google_api_key">AIzaSyCRTaktLBVfCFKmXNsrDYKRbVYHsfNIdk0</string>
    <string name="history">History</string>
    <string name="no_faq_found">No faq found!</string>
    <string name="ok">OK</string>
    <string name="open_instagram">Open Instagram</string>
    <string name="profile_error_des">"Dear user, to continue your activity in the top follow, you need to upload your profile picture on Instagram.
You can change your profile with one click."</string>
    <string name="referral_statistic">Referral Statistic</string>
    <string name="set_profile">Set Profile</string>
    <string name="settings">Settings</string>
    <string name="support_contact_us">Support / Contact Us</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="your_language">Your Language:</string>
    <string name="your_referrals">Your referrals</string>
</resources>