<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_20sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_8sdp" app:cardElevation="12.0dip" app:cardMaxElevation="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/_16sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_17sdp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_4sdp" android:layout_marginBottom="@dimen/_4sdp" android:text="@string/referral_statistic" style="@style/TextViewFontBold" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_19sdp" android:layout_height="@dimen/_19sdp" android:layout_marginLeft="@dimen/_7sdp" android:layout_marginRight="@dimen/_7sdp" app:srcCompat="@drawable/ic_followers" app:tint="@color/purple_900" />
                <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_13sdp" android:textColor="@color/gray8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_referrals" style="@style/TextViewFontBold" />
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_13sdp" android:textStyle="bold" android:textColor="@color/purple_900" android:id="@id/invite_count_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:text="0" style="@style/TextViewFontBold" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_19sdp" android:layout_height="@dimen/_19sdp" android:layout_marginLeft="@dimen/_7sdp" android:layout_marginRight="@dimen/_7sdp" app:srcCompat="@drawable/ic_gem" />
                <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_13sdp" android:textColor="@color/gray8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/crystals_earned_from_referrals" style="@style/TextViewFontLight" />
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_13sdp" android:textStyle="bold" android:textColor="@color/purple_900" android:id="@id/earned_crystals_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:text="0" style="@style/TextViewFontBold" />
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_18sdp" android:layout_marginBottom="@dimen/_3sdp" app:cardBackgroundColor="@color/button_color" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="2.0dip" app:cardMaxElevation="2.0dip">
            <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_11sdp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/ok_bt" android:background="?selectableItemBackground" android:paddingLeft="@dimen/_58sdp" android:paddingTop="@dimen/_10sdp" android:paddingRight="@dimen/_58sdp" android:paddingBottom="@dimen/_10sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" style="@style/TextViewFontLight" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>