<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_18sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_8sdp" app:cardElevation="0.0dip" app:cardMaxElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/_15sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_16sdp" android:textColor="@color/gray9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginTop="@dimen/_6sdp" android:layout_marginRight="@dimen/_5sdp" android:layout_marginBottom="@dimen/_10sdp" android:text="Top Follow" style="@style/TextViewFontBold" />
        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/gray7" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_error_des" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/_20sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:cardBackgroundColor="@color/button_color" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/CardViewShadowYellow">
                <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_11sdp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/set_profile_bt" android:background="?selectableItemBackground" android:paddingLeft="@dimen/_23sdp" android:paddingTop="@dimen/_8sdp" android:paddingRight="@dimen/_23sdp" android:paddingBottom="@dimen/_8sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_profile" style="@style/TextViewFontBold" />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:layout_gravity="center" android:id="@id/ngtv_bt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" app:cardBackgroundColor="@color/transparent" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="0.0dip" app:cardMaxElevation="0.0dip">
                <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_11sdp" android:textStyle="bold" android:textColor="@color/gray4" android:gravity="center" android:layout_gravity="center" android:id="@id/open_instagram_bt" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="@dimen/_15sdp" android:paddingTop="@dimen/_8sdp" android:paddingRight="@dimen/_15sdp" android:paddingBottom="@dimen/_8sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/open_instagram" style="@style/TextViewFontBold" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>