<?xml version="1.0" encoding="utf-8"?>
<com.nivaroid.topfollow.views.slidingpanel.SlidingUpPanelLayout android:gravity="bottom" android:id="@id/sliding_panel_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" app:umanoDragView="@id/dragView" app:umanoOverlay="true" app:umanoPanelHeight="@dimen/_45sdp" app:umanoScrollableView="@id/questions_lyt" app:umanoShadowHeight="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/toolbar_background" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView android:theme="@style/RippleColorTheme" android:id="@id/back_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_8sdp" android:focusable="true" android:clickable="true" android:layout_width="@dimen/_34sdp" android:layout_height="@dimen/_34sdp" android:layout_marginLeft="@dimen/_6sdp" android:layout_marginRight="@dimen/_6sdp" app:srcCompat="@drawable/ic_back" />
                <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_13sdp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:text="@string/settings" android:layout_weight="1.0" style="@style/TextViewFontBold" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:padding="@dimen/_12sdp" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/ShadowCardViewNonRadios">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/history_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_12sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" app:srcCompat="@drawable/ic_history" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/history" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp" style="@style/TextViewFontLight" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/ShadowCardViewNonRadios">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/buy_follower_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_12sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" app:srcCompat="@drawable/ic_wallet" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buy_followers_likes" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp" style="@style/TextViewFontLight" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/ShadowCardViewNonRadios">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/free_coins_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_12sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" app:srcCompat="@drawable/ic_free_coins" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/free_coins" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp" style="@style/TextViewFontLight" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/ShadowCardViewNonRadios">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/support_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_12sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" app:srcCompat="@drawable/ic_help" app:tint="#ffb206ee" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_contact_us" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp" style="@style/TextViewFontLight" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_4sdp" app:cardMaxElevation="@dimen/_4sdp" style="@style/ShadowCardViewNonRadios">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/telegram_bt" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/_12sdp" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" app:srcCompat="@drawable/ic_telegram" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telegram_channel" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp" style="@style/TextViewFontLight" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_marginTop="@dimen/_18sdp" android:layout_marginRight="@dimen/_8sdp" android:layout_marginBottom="@dimen/_8sdp" android:layoutDirection="ltr">
                    <com.google.android.material.textview.MaterialTextView android:textStyle="bold" android:textColor="@color/gray8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_language" android:layout_weight="1.0" style="@style/TextViewFontBold" />
                    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_3sdp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/_6sdp" app:cardElevation="@dimen/_2sdp" app:cardMaxElevation="@dimen/_2sdp" style="@style/ShadowCardViewNonRadios">
                        <Spinner android:id="@id/language_spinner" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:popupBackground="@drawable/spinner_popup_background" android:backgroundTint="@drawable/task_spinner" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <com.nivaroid.topfollow.views.cardview.OptRoundCardView android:orientation="vertical" android:id="@id/dragView" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/white" app:optRoundCardCornerRadius="@dimen/_26sdp" app:optRoundCardLeftBottomCorner="false" app:optRoundCardRightBottomCorner="false">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/_14sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/radius_top_sheet" android:paddingLeft="@dimen/_18sdp" android:paddingTop="@dimen/_4sdp" android:paddingRight="@dimen/_18sdp" android:paddingBottom="@dimen/_4sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_45sdp">
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginStart="8.0dip" app:srcCompat="@drawable/ic_help" app:tint="@color/white" />
                <com.google.android.material.textview.MaterialTextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="11.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="11.0dip" android:text="@string/frequently_asked_questions" android:layout_weight="1.0" style="@style/TextViewFontBold" />
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/question_iv" android:layout_width="22.0dip" android:layout_height="22.0dip" android:rotation="180.0" app:srcCompat="@drawable/ic_arrow" app:tint="@color/white" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView_questions" android:paddingBottom="@dimen/_24sdp" android:clipToPadding="false" android:layoutAnimation="@anim/layout_animation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/question_empty_lyt" android:paddingBottom="@dimen/_24sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/_31sdp" android:layout_height="@dimen/_31sdp" app:srcCompat="@drawable/ic_new_design_sad" />
                    <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_12sdp" android:textColor="#ff707070" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_faq_found" android:layout_marginStart="@dimen/_8sdp" style="@style/TextViewFontBold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.nivaroid.topfollow.views.cardview.OptRoundCardView>
</com.nivaroid.topfollow.views.slidingpanel.SlidingUpPanelLayout>